--- a/src/styles/components/form/input-group.styl
+++ b/src/styles/components/form/input-group.styl
@@ -26,7 +26,7 @@
 
         &[type=password]
             font-family: Verdana, Geneva, Tahoma, sans-serif
-            letter-spacing: 3px
+            font-size .9em
             font-weight: bolder
 
         +placeholder()
