--- a/src/styles/mixins/grid.styl
+++ b/src/styles/mixins/grid.styl
@@ -4,6 +4,8 @@ ms-col-calc($cols, $max-cols)
 ms-grid-flex-width($cols)
   $width = ms-col-calc($cols, $grid-cols)
   flex 0 $width
+  width $width
+  
 
 ms-grid-flex-gutter($width)
   padding 0 $width
